<resources>
    <string name="app_name">Comprameste</string>

    <string name="app_titulo">COMPRAMESTE</string>
    <string name="cabecera_producto">Producto</string>
    <string name="cabecera_valor_unitario">Valor Uni.</string>
    <string name="title_valor_unitario">Valor Unitario</string>
    <string name="cabecera_cantidad">Cant</string>
    <string name="title_cantidad">Cantidad</string>
    <string name="cabecera_descuento">Desc</string>
    <string name="title_descuento">% Descuento</string>
    <string name="simbolo_total">$</string>
    <string name="cabecera_total">Total</string>
    <string name="cabecera_id">Id</string>
    <string name="cabecera_fecha">Fecha</string>
    <string name="cabecera_cantidad_prod">Cantidad Prod.</string>
    <string name="total_final">Total:</string>
    <string name="total_final_inicial">0</string>
    <string name="boton_agregar">Agregar</string>
    <string name="boton_calcular">Calcular</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="lb_cantidad_item">Cant:</string>
    <string name="lb_valUni_item">Valor Und:</string>
    <string name="lb_porcDesc_item">% Desc:</string>
    <string name="lb_total_item">Total:</string>
    <string name="boton_nueva_compra">Nueva Compra</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_historial">Historial</string>
    <string name="boton_duplicar_compra">Duplicar Compra</string>
    <string name="cabecera_compras_realizadas">Compras Realizadas</string>
    <string name="cabecera_nombre_compra">Nombre</string>
    <string name="lb_lista_productos">↓ Lista de productos ↓</string>
    <string name="lb_lista_compras">↓ Lista de compras ↓</string>
    <string name="lb_info_lista_productos">← editar | eliminar → </string>
<!--    <string name="lb_info_lista_compras">Mantener para ver detallado</string>-->
    <string name="lb_info_lista_compras">← ver detalle | eliminar → </string>
    <string name="lb_nombre_compra">Nombre de la Compra</string>
</resources>
