<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/txtCantProd"
        android:layout_width="138dp"
        android:layout_height="20dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/cabecera_cantidad"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lbCant"
        app:layout_constraintTop_toBottomOf="@+id/txtNomProd" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/lb_total_item"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbValUni" />

    <TextView
        android:id="@+id/txtTotalProd"
        android:layout_width="138dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/cabecera_total"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lblTotal"
        app:layout_constraintTop_toBottomOf="@+id/txtValorProd" />

    <TextView
        android:id="@+id/lbValUni"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/lb_valUni_item"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbCant" />

    <TextView
        android:id="@+id/lbCant"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/lb_cantidad_item"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomProd" />

    <TextView
        android:id="@+id/txtValorProd"
        android:layout_width="138dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/cabecera_valor_unitario"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lbValUni"
        app:layout_constraintTop_toBottomOf="@+id/txtCantProd" />

    <TextView
        android:id="@+id/txtNomProd"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/cabecera_producto"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_launcher_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
