<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/miScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_titulo"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                app:fontFamily="sans-serif" />

            <Button
                android:id="@+id/btnNuevaCompra"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton_nueva_compra" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbTotalFinal"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/total_final"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/txtTotalFinal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="yes"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbProducto"
                    android:layout_width="108dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/cabecera_producto" />

                <TextView
                    android:id="@+id/lbCantidad"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/cabecera_cantidad" />

                <TextView
                    android:id="@+id/lbValorUni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/cabecera_valor_unitario" />

                <TextView
                    android:id="@+id/lbTotal"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/cabecera_total" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtProducto"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="true"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/txtCantidad"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="yes"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/txtValorUnitario"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="true"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/txtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="yes"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCalcular"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/boton_calcular" />

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:text="@string/boton_agregar" />

            <ListView
                android:id="@+id/lvProductos"
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:layout_margin="24dp"
                android:baselineAligned="false"
                tools:ignore="ExtraText,NestedScrolling">

            </ListView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>